--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=algafood-api
+
+# ========= CONFIGURAÇÕES DO JPA =========
+spring.datasource.url=jdbc:mysql://192.168.0.54:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=igor
+spring.datasource.password=L@ur&nco@Mysql135
