--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,18 @@
 			<optional>true</optional>
 		</dependency>
 
-
+		<!-- DEPENDÊNCIA PARA ACEITAR ALEM DE application/json, ACEITAR FORMATO XML(application/XML) COMO RESPOSTA DA REQUISIÇÃO -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>test</scope>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-devtools</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		-->
 	</dependencies>
 
 	<build>
