--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.password=L@ur&nco@Mysql135
 spring.jpa.generate-ddl=true 
 
 #  Indica que o Hibernate deve criar o esquema do banco de dados a partir do zero toda vez que a aplicação é inicializada.
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
