--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- DEPENDÊNCIA PARA ACEITAR ALEM DE application/json, ACEITAR FORMATO XML(application/XML) COMO RESPOSTA DA REQUISIÇÃO -->
+		<!-- DEPENDENCIA PARA ACEITAR ALEM DE application/json, ACEITAR FORMATO XML(application/XML) COMO RESPOSTA DA REQUISICAO -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
@@ -77,6 +77,24 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
