--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=algafood-api
 
-# ========= CONFIGURAÇÕES DO JPA =========
+# ========= CONFIGURACOES DO JPA =========
 spring.datasource.url=jdbc:mysql://192.168.0.54:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=igor
 spring.datasource.password=L@ur&nco@Mysql135
@@ -8,7 +8,7 @@ spring.datasource.password=L@ur&nco@Mysql135
 # indica que deve gerar automaticamente o Data Definition Language (DDL) para o banco de dados.
 spring.jpa.generate-ddl=true 
 
-#  Indica que o Hibernate deve criar o esquema do banco de dados a partir do zero toda vez que a aplicação é inicializada.
+#  Indica que o Hibernate deve criar o esquema do banco de dados a partir do zero toda vez que a aplicacao e inicializada.
 # spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.hibernate.ddl-auto=update
