Implementação da dependencia FlyWay para versionamento do banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,21 @@ spring.datasource.username=igor
 spring.datasource.password=L@ur&nco@Mysql135
 
 # indica que deve gerar automaticamente o Data Definition Language (DDL) para o banco de dados.
-spring.jpa.generate-ddl=true 
+#spring.jpa.generate-ddl=true
 
 #  Indica que o Hibernate deve criar o esquema do banco de dados a partir do zero toda vez que a aplicacao e inicializada.
 # spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.hibernate.ddl-auto=update
+
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+# Maximo de conexoes que podem ser abertas com o banco de dados, o padrao e 10
+spring.datasource.hikari.maximum-pool-size=10
+
+# Minimo de conexoes que podem ser abertas com o banco de dados
+spring.datasource.hikari.minimum-idle=10
+
+# O tempo maximo que as conexoes a mais que foram abertas, podem estar conectadas com o banco de dados
+#spring.datasource.hikari.idle-timeout=10000
