Criandomi gração a partir de DDL gerado por schema generation na configuração do application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,19 @@ spring.datasource.password=L@ur&nco@Mysql135
 #  Indica que o Hibernate deve criar o esquema do banco de dados a partir do zero toda vez que a aplicacao e inicializada.
 # spring.jpa.hibernate.ddl-auto=create
 
+# ======================================
+# Cria um script de geracao mas nao executa
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 
+# Salva o arquivo nesse caminho
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+# ======================================
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
+
+# ======================================
 # Maximo de conexoes que podem ser abertas com o banco de dados, o padrao e 10
 spring.datasource.hikari.maximum-pool-size=10
 
@@ -24,3 +32,4 @@ spring.datasource.hikari.minimum-idle=10
 
 # O tempo maximo que as conexoes a mais que foram abertas, podem estar conectadas com o banco de dados
 #spring.datasource.hikari.idle-timeout=10000
+# ======================================
