--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=algafood-api
 
 # ========= CONFIGURACOES DO JPA =========
-spring.datasource.url=jdbc:mysql://192.168.0.54:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.0.54:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=igor
 spring.datasource.password=L@ur&nco@Mysql135
 
@@ -17,6 +17,8 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 
 # Salva o arquivo nesse caminho
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
+spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 # ======================================
 
 spring.jpa.show-sql=true
