ConfigurÃação para especificar caminhos onde deve procurar o arquivos de insercao de dados de teste

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=L@ur&nco@Mysql135
 #  Indica que o Hibernate deve criar o esquema do banco de dados a partir do zero toda vez que a aplicacao e inicializada.
 # spring.jpa.hibernate.ddl-auto=create
 
-# ======================================
+# ========= GERACAO DE SCRIPTS =============================
 # Cria um script de geracao mas nao executa
 spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 
@@ -19,6 +19,13 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
 spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
+# ======================================
+
+# ========= CONFIGURACOES DO FLYWAY PARA VERSIONAMENTO DO BANCO DE DADOS =============================
+
+# Especifica os caminhos onde deve procurar o arquivos de insercao de dados de teste
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
 # ======================================
 
 spring.jpa.show-sql=true
