Criação script de migração do banco - criação da tabela TB_ITEM_PEDIDO usando a ferramenta FlyWay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ spring.datasource.password=L@ur&nco@Mysql135
 
 # ========= GERACAO DE SCRIPTS =============================
 # Cria um script de geracao mas nao executa
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 
 # Salva o arquivo nesse caminho
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
 spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 # ======================================
@@ -24,7 +24,7 @@ spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 # ========= CONFIGURACOES DO FLYWAY PARA VERSIONAMENTO DO BANCO DE DADOS =============================
 
 # Especifica os caminhos onde deve procurar o arquivos de insercao de dados de teste
-spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+#spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 # ======================================
 
