Tratando a exception - Campo com formato invalido (InvalidFormatException)

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
