--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,5 +60,12 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
 
 
+# ========================================================================================
 
+# Faz com que o Spring MVC lance uma excecao (NoHandlerFoundException) quando uma requisicao nao corresponde a nenhum handler (ou seja, nao encontra um endpoint correspondente).
+spring.mvc.throw-exception-if-no-handler-found=true
+
+# Esta configuracao desabilita o mapeamento automatico de recursos estaticos no Spring Boot.
+# Eh util em cenarios onde voca deseja ter controle total sobre os mapeamentos de recursos estaticos ou quando nao quer que o Spring Boot interfira na gestao desses recursos.
+spring.resources.add-mappings=false
 
