--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<!-- BIBLIOTECA PARA LIMITAR CAMPOS RETORNADOS PELA API -->
+		<dependency>
+			<groupId>com.github.bohnman</groupId>
+			<artifactId>squiggly-filter-jackson</artifactId>
+			<version>1.3.18</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
