Implementacao da validacao do tamanho maximo do arquivo permitido

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,14 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # Eh util em cenarios onde voca deseja ter controle total sobre os mapeamentos de recursos estaticos ou quando nao quer que o Spring Boot interfira na gestao desses recursos.
 spring.resources.add-mappings=false
 
+# ========================================================================================
+# ========= CONFIGURACOES DO UPLOAD DE ARQUIVO ===========================================
+# ========================================================================================
+# Foi comentado porque essa configuracao eh global para todas as APIs do projeto e foi implementado a validacao usando annotation customizada @FileSizeValid para tratar o tamanho individualmente
+
+# Define o tamanho maximo permitido para um unico arquivo enviado em uma requisicao multipart.
+#spring.servlet.multipart.max-file-size=10KB
+
+# Define o tamanho maximo permitido para a requisicao completa, incluindo todos os arquivos e dados do formulario.
+#spring.servlet..multipart.max-request-size=10MB
+
