Externalizando o path para salvar o arquivo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=algafood-api
 
+algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/algafood-api/src/main/resources
+
+
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
 # ==================================================
