Configurando o projeto para envio de e-mails usando servidor SMTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -83,3 +83,12 @@ spring.resources.add-mappings=false
 # Define o tamanho maximo permitido para a requisicao completa, incluindo todos os arquivos e dados do formulario.
 #spring.servlet..multipart.max-request-size=10MB
 
+
+# ========================================================================================
+# ========= CONFIGURACOES DO SENDGRID PARA ENVIO DE E-MAIL ===============================
+# ========================================================================================
+
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apykey
+spring.mail.password=
