--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,14 @@ Possible solutions:
 			<version>6.21.3</version>
 		</dependency>
 
+		<!-- BIBLIOTECA SPRING PARA ENVIO DE EMAIL -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
