--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -90,7 +90,7 @@ spring.resources.add-mappings=false
 
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
-spring.mail.username=apykey
+spring.mail.username=apikey
 spring.mail.password=
 
 algafood.email.remetente=Algafood <naoresponder@algafood.com.br>
