--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,4 +93,4 @@ spring.mail.port=587
 spring.mail.username=apikey
 spring.mail.password=
 
-algafood.email.remetente=Algafood <naoresponder@algafood.com.br>
+algafood.email.remetente=
