Formatando valores monetários com FTL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=algafood-api
 
 algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/algafood-api/src/main/resources
 
+# Configura o locale (localidade) para o motor de templates FreeMarker no contexto da aplicacao
+spring.freemarker.settings.locale=pt_BR
+
 
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
@@ -94,3 +97,4 @@ spring.mail.username=apikey
 spring.mail.password=
 
 algafood.email.remetente=
+
