Implementando o service de envio de e-mail fake

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,6 @@ spring.application.name=algafood-api
 
 algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/algafood-api/src/main/resources
 
-# Configura o locale (localidade) para o motor de templates FreeMarker no contexto da aplicacao
-spring.freemarker.settings.locale=pt_BR
-
 
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
@@ -98,3 +95,8 @@ spring.mail.password=
 
 algafood.email.remetente=
 
+# Configura o locale (localidade) para o motor de templates FreeMarker no contexto da aplicacao
+spring.freemarker.settings.locale=pt_BR
+
+# Confiuracao para implementar o service de e-mail de acordo com a implementacao
+algafood.email.impl=fake
