Implementando serviço de envio de e-mail sandbox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -98,5 +98,6 @@ algafood.email.remetente=
 # Configura o locale (localidade) para o motor de templates FreeMarker no contexto da aplicacao
 spring.freemarker.settings.locale=pt_BR
 
-# Confiuracao para implementar o service de e-mail de acordo com a implementacao
-algafood.email.impl=fake
+# Confiuracao para implementar o service de e-mail de acordo com o valor especificado
+algafood.email.impl=sandbox
+algafood.email.sandbox.destinatario=digite aqui o endereco email que ira receber o email enviado usando, a implementacao sandbox...
