Publicando Domain Event a partir do Aggregate Root

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -99,5 +99,5 @@ algafood.email.remetente=
 spring.freemarker.settings.locale=pt_BR
 
 # Confiuracao para implementar o service de e-mail de acordo com o valor especificado
-algafood.email.impl=sandbox
-algafood.email.sandbox.destinatario=digite aqui o endereco email que ira receber o email enviado usando, a implementacao sandbox...
+algafood.email.impl=fake
+algafood.email.sandbox.destinatario=digite aqui o endereco email que ira receber o email enviado, usando a implementacao sandbox...
