--- a/pom.xml
+++ b/pom.xml
@@ -93,13 +93,6 @@
             <groupId>com.github.bohnman</groupId>
             <artifactId>squiggly-filter-jackson</artifactId>
             <version>1.3.18</version>
-            <exclusions>
-                <!-- EXCLUI DEPENDENCIA PARA NAO DAR CONFLITO COM A DEPENDENCIA DO SPRINGFOX -->
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- BIBLIOTECA JASPER REPORT PARA EMISSAO DE PDF -->
@@ -129,22 +122,31 @@
         <!-- BIBLIOTECA PARA GERAR DOCUMENTACAO AUTOMATICA EM JSON DAS APIS DO PROJETO -->
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.9.2</version>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
         </dependency>
+
 
         <!-- BIBLIOTECA PARA VISUALIZAR NO BROWSER EM HTML A DOCUMENTACAO GERADA EM JSON PELO SPRINGFOX  -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.9.2</version>
+            <version>3.0.0</version>
         </dependency>
 
         <!-- BIBLIOTECA PARA VISUALIZAR OS CAMPOS OBRIGATORIOS NO BROWSER EM HTML A DOCUMENTACAO GERADA EM JSON PELO SPRINGFOX  -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-bean-validators</artifactId>
-            <version>2.9.2</version>
+            <version>3.0.0</version>
+        </dependency>
+
+
+<!--     Ao tentar serializar um OffsetDateTime em algum example da nossa documentacao, nos depararemos com a seguinte Exception:
+         Caused by: com.fasterxml.jackson.databind.exc.InvalidDefinitionException: Java 8 date/time type java.time. -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
     </dependencies>
