--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,14 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+<!--            <version>3.0.0</version>-->
+        </dependency>
+
+
     </dependencies>
 
     <build>
