--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=algafood-api
 
 algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/algafood-api/src/main/resources
 
+# Comprime as respostas HTTP com Gzip
+server.compression.enabled=true
 
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
