Adicionando seguranca na API com Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/al
 # Comprime as respostas HTTP com Gzip
 server.compression.enabled=true
 
+# Usuario e senha usando o Basic Auth do Spring Security
+spring.security.user.name=algafood
+spring.security.user.password=123456
+
+
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
 # ==================================================
