--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
             <version>20240303</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
