Configurando autenticacao de usuarios em memoria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/al
 # Comprime as respostas HTTP com Gzip
 server.compression.enabled=true
 
-# Usuario e senha usando o Basic Auth do Spring Security
-spring.security.user.name=algafood
-spring.security.user.password=123456
+# Usuario e senha usando o Basic Auth do Spring Security, Obs: Foi implementado user e password em memoria
+#spring.security.user.name=algafood
+#spring.security.user.password=123456
 
 
 # ==================================================
