Configurando o Resource Server para JWT assinado com chave simétrica

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/al
 # Comprime as respostas HTTP com Gzip
 server.compression.enabled=true
 
+logging.level.org.springframework=INFO
+
 
 # ==============================================================
 # ============== CONFIGURACOES DO SPRING SECURITY ==============
@@ -14,10 +16,10 @@ server.compression.enabled=true
 #spring.security.user.name=algafood
 #spring.security.user.password=123456
 
-# Essas configuracoes sao usadas para configurar um servidor de recursos OAuth 2.0 no Spring Security que valida tokens opacos
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
-spring.security.oauth2.resourceserver.opaquetoken.client-id=check-token
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+# Essas configuracoes sao usadas para configurar um servidor de recursos OAuth 2.0 no Spring Security que valida tokens opacos(opaque tokens)
+#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+#spring.security.oauth2.resourceserver.opaquetoken.client-id=check-token
+#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
 
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
