--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ server.compression.enabled=true
 
 logging.level.org.springframework=INFO
 
-
 # ==============================================================
 # ============== CONFIGURACOES DO SPRING SECURITY ==============
 # ==============================================================
@@ -20,6 +19,8 @@ logging.level.org.springframework=INFO
 #spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
 #spring.security.oauth2.resourceserver.opaquetoken.client-id=check-token
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+
 
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
