--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/al
 # Comprime as respostas HTTP com Gzip
 server.compression.enabled=true
 
-logging.level.org.springframework=INFO
+#logging.level.org.springframework=INFO
 
 # ==============================================================
 # ============== CONFIGURACOES DO SPRING SECURITY ==============
