Juntando o Resource Server com o Authorization Server no mesmo projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,15 @@ server.compression.enabled=true
 spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
 
 
+# ==================================================================
+# ===== CONFIGURACAO DO KEY STORE PARA AS CHAVES ASSIMETRICAS ======
+# ==================================================================
+
+algafood.jwt.keystore.path=classpath:keys/algafood.jks
+algafood.jwt.keystore.password=123456
+algafood.jwt.keystore.keypair-alias=algafood
+
+
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
 # ==================================================
