--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,19 @@
             <version>6.21.2</version>
         </dependency>
 
+        <!-- DEPENDENCIA PARA Token JWT (JSON Web Token)	-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.11.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.7.RELEASE</version>
+        </dependency>
+
 
 
     </dependencies>
