Implementando o endpoint do JSON Web Key Set (JWKS) - para expor a chave publica

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,12 @@ server.compression.enabled=true
 #spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
 #spring.security.oauth2.resourceserver.opaquetoken.client-id=check-token
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
-spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+
+# Antes de usar o JSON Web Key Set (JWKS)
+#spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+
+# Usando o JSON Web Key Set (JWKS)
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-know/jwks.json
 
 
 # ==================================================================
