--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=algafood-api
+server.port=8080
 
 algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/algafood-api/src/main/resources
 
@@ -41,7 +42,7 @@ algafood.jwt.keystore.keypair-alias=algafood
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
 # ==================================================
-spring.datasource.url=jdbc:mysql://192.168.0.54:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://${DB_HOST:192.168.0.54:3306}/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=igor
 spring.datasource.password=L@ur&nco@Mysql135
 
@@ -71,7 +72,7 @@ spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 # ====================================================================================================
 
 # Especifica os caminhos onde deve procurar o arquivos de insercao de dados de teste
-#spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 
 # ====================================================================================================
