--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,20 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.wel
 
 
 # ==================================================================
+# ================ CONFIGURACAO DO SPRING SESSION =================
+# ==================================================================
+
+# Desativa o uso de uma implementação de armazenamento de sessees no Spring Session, assim nao sera necessario configurar o Spring Session para rodar a aplicacao localmente
+spring.session.store-type=none
+
+# Configurado no docker-compose
+#spring.redis.host=192.168.0.54
+#spring.redis.port=6379
+#spring.redis.password=redis12345
+
+
+
+# ==================================================================
 # ===== CONFIGURACAO DO KEY STORE PARA AS CHAVES ASSIMETRICAS ======
 # ==================================================================
 
