Configurando o protocolo HTTPS nos links da API com HATEOAS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/al
 # Comprime as respostas HTTP com Gzip
 server.compression.enabled=true
 
+# Configura o comportamento de redirecionamento de cabecalhos HTTP de proxies. Quando essa propriedade esta configurada,
+# o Spring Boot utilizara os cabeçalhos X-Forwarded-* (por exemplo, X-Forwarded-For, X-Forwarded-Proto, X-Forwarded-Host, etc.)
+# para corrigir a URL de solicitacao original e a origem do cliente. Isso é útil em ambientes onde o aplicativo
+# esta sendo executado atras de um proxy reverso, como um balanceador de carga ou um servidor de API Gateway.
+server.forward-headers-strategy=framework
+
 #logging.level.org.springframework=INFO
 
 # ==============================================================
