--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,7 +91,7 @@ spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 # ====================================================================================================
 
 # Especifica os caminhos onde deve procurar o arquivos de insercao de dados de teste
-spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+#spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 
 # ====================================================================================================
@@ -156,3 +156,13 @@ spring.freemarker.settings.locale=pt_BR
 # Confiuracao para implementar o service de e-mail de acordo com o valor especificado
 algafood.email.impl=fake
 algafood.email.sandbox.destinatario=digite aqui o endereco email que ira receber o email enviado, usando a implementacao sandbox...
+
+# ========================================================
+# ============== CONFIGURACOES DO SPRINGDOC ==============
+# ========================================================
+
+# Especifica que o SpringDoc deve escanear o pacote com.algaworks.algafood.api para gerar a documentação da API.
+springdoc.packages-to-scan=com.algaworks.algafood.api
+
+# Define os caminhos que o SpringDoc deve considerar ao gerar a documentação da API
+springdoc.paths-to-match=/v1/**,/v2/**
