Configurando multiplas documentacoes em um so projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -165,4 +165,4 @@ algafood.email.sandbox.destinatario=digite aqui o endereco email que ira receber
 springdoc.packages-to-scan=com.algaworks.algafood.api
 
 # Define os caminhos que o SpringDoc deve considerar ao gerar a documentação da API
-springdoc.paths-to-match=/v1/**,/v2/**
+#springdoc.paths-to-match=/v1/**,/v2/**
