Descrevendo tag na documentacao e associacao com a controller - CidadeController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -166,3 +166,6 @@ springdoc.packages-to-scan=com.algaworks.algafood.api
 
 # Define os caminhos que o SpringDoc deve considerar ao gerar a documentação da API
 #springdoc.paths-to-match=/v1/**,/v2/**
+
+springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/token
+springdoc.oAuthFlow.tokenUrl=http://aplicacao-cliente
