Implementacao do novo Spring Security para o fluxo - Client Credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,12 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.wel
 
 
 # ==================================================================
+# =========== CONFIGURACAO AlgafoodSecurityProperties ==============
+# ==================================================================
+
+algafood.auth.provider-url=http://127.0.0.1:8080
+
+# ==================================================================
 # ================ CONFIGURACAO DO SPRING SESSION =================
 # ==================================================================
 
@@ -44,7 +50,6 @@ spring.session.store-type=none
 #spring.redis.host=192.168.0.54
 #spring.redis.port=6379
 #spring.redis.password=redis12345
-
 
 
 # ==================================================================
