--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ server.forward-headers-strategy=framework
 #spring.security.user.password=123456
 
 # Essas configuracoes sao usadas para configurar um servidor de recursos OAuth 2.0 no Spring Security que valida tokens opacos(opaque tokens)
-#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
-#spring.security.oauth2.resourceserver.opaquetoken.client-id=check-token
-#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8080/oauth2/introspect
+spring.security.oauth2.resourceserver.opaquetoken.client-id=algafood-web-client-credentials-token-opaco
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=web123
 
 # Antes de usar o JSON Web Key Set (JWKS)
 #spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
