Configurando o Resource Server com token JWT para o fluxo - Client Credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,30 +26,11 @@ spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://local
 spring.security.oauth2.resourceserver.opaquetoken.client-id=algafood-web-client-credentials-token-opaco
 spring.security.oauth2.resourceserver.opaquetoken.client-secret=web123
 
-# Antes de usar o JSON Web Key Set (JWKS)
+# Antes de usar o JSON Web Key Set (JWKS) - Usando a chave publica no classpath da aplicacao
 #spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
 
 # Usando o JSON Web Key Set (JWKS)
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-know/jwks.json
-
-
-# ==================================================================
-# =========== CONFIGURACAO AlgafoodSecurityProperties ==============
-# ==================================================================
-
-algafood.auth.provider-url=http://127.0.0.1:8080
-
-# ==================================================================
-# ================ CONFIGURACAO DO SPRING SESSION =================
-# ==================================================================
-
-# Desativa o uso de uma implementação de armazenamento de sessees no Spring Session, assim nao sera necessario configurar o Spring Session para rodar a aplicacao localmente
-spring.session.store-type=none
-
-# Configurado no docker-compose
-#spring.redis.host=192.168.0.54
-#spring.redis.port=6379
-#spring.redis.password=redis12345
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/oauth2/jwks
 
 
 # ==================================================================
@@ -62,6 +43,25 @@ algafood.jwt.keystore.path=base64:MIIKyAIBAzCCCnIGCSqGSIb3DQEHAaCCCmMEggpfMIIKWz
 algafood.jwt.keystore.password=123456
 algafood.jwt.keystore.keypair-alias=algafood
 
+
+# ==================================================================
+# =========== CONFIGURACAO AlgafoodSecurityProperties ==============
+# ==================================================================
+
+algafood.auth.provider-url=http://127.0.0.1:8080
+
+
+# ==================================================================
+# ================ CONFIGURACAO DO SPRING SESSION =================
+# ==================================================================
+
+# Desativa o uso de uma implementação de armazenamento de sessees no Spring Session, assim nao sera necessario configurar o Spring Session para rodar a aplicacao localmente
+spring.session.store-type=none
+
+# Configurado no docker-compose
+#spring.redis.host=192.168.0.54
+#spring.redis.port=6379
+#spring.redis.password=redis12345
 
 # ==================================================
 # ============== CONFIGURACOES DO JPA ==============
