--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=algafood-api
+server.port=8080
 
 algafood.storage.local.diretorio-fotos=/temp/especialista-spring-rest/backend/algafood-api/src/main/resources
 
@@ -96,7 +97,7 @@ spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 # ====================================================================================================
 
 # Especifica os caminhos onde deve procurar o arquivos de insercao de dados de teste
-spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+#spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 
 # ====================================================================================================
