Tela de clientes autorizados pelo usuário

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -97,7 +97,7 @@ spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 # ====================================================================================================
 
 # Especifica os caminhos onde deve procurar o arquivos de insercao de dados de teste
-#spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 
 # ====================================================================================================
