--- a/pom.xml
+++ b/pom.xml
@@ -180,11 +180,12 @@
 
 
         <!--     Ao tentar serializar um OffsetDateTime em algum example da nossa documentacao, nos depararemos com a seguinte Exception:
-                 Caused by: com.fasterxml.jackson.databind.exc.InvalidDefinitionException: Java 8 date/time type java.time. -->
+                 Caused by: com.fasterxml.jackson.databind.exc.InvalidDefinitionException: Java 8 date/time type java.time.
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+                  -->
 
 
         <dependency>
