--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
         <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
+        <spring.modelmapper.version>3.0.0</spring.modelmapper.version>
+        <spring.jasperreports.version>6.21.3</spring.jasperreports.version>
+        <spring.authorizationserver.version>0.3.1</spring.authorizationserver.version>
+        <spring.json.version>20240303</spring.json.version>
+        <spring.nimbusds.version>6.21.2</spring.nimbusds.version>
         <springdoc.version>1.6.9</springdoc.version>
     </properties>
 
@@ -106,26 +111,20 @@
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
-            <version>3.0.0</version>
+            <version>${spring.modelmapper.version}</version>
         </dependency>
 
-        <!-- BIBLIOTECA PARA LIMITAR CAMPOS RETORNADOS PELA API -->
-        <dependency>
-            <groupId>com.github.bohnman</groupId>
-            <artifactId>squiggly-filter-jackson</artifactId>
-            <version>1.3.18</version>
-        </dependency>
 
         <!-- BIBLIOTECA JASPER REPORT PARA EMISSAO DE PDF -->
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
-            <version>6.21.3</version>
+            <version>${spring.jasperreports.version}</version>
         </dependency>
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports-functions</artifactId>
-            <version>6.21.3</version>
+            <version>${spring.jasperreports.version}</version>
         </dependency>
 
         <!-- BIBLIOTECA SPRING PARA ENVIO DE EMAIL -->
@@ -139,28 +138,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
-
-<!--        &lt;!&ndash; BIBLIOTECA PARA GERAR DOCUMENTACAO AUTOMATICA EM JSON DAS APIS DO PROJETO &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>io.springfox</groupId>-->
-<!--            <artifactId>springfox-boot-starter</artifactId>-->
-<!--            <version>3.0.0</version>-->
-<!--        </dependency>-->
-
-
-<!--        &lt;!&ndash; BIBLIOTECA PARA VISUALIZAR NO BROWSER EM HTML A DOCUMENTACAO GERADA EM JSON PELO SPRINGFOX  &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>io.springfox</groupId>-->
-<!--            <artifactId>springfox-swagger-ui</artifactId>-->
-<!--            <version>3.0.0</version>-->
-<!--        </dependency>-->
-
-<!--        &lt;!&ndash; BIBLIOTECA PARA VISUALIZAR OS CAMPOS OBRIGATORIOS NO BROWSER EM HTML A DOCUMENTACAO GERADA EM JSON PELO SPRINGFOX  &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>io.springfox</groupId>-->
-<!--            <artifactId>springfox-bean-validators</artifactId>-->
-<!--            <version>3.0.0</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -178,27 +155,15 @@
             <version>${springdoc.version}</version>
         </dependency>
 
-
-        <!--     Ao tentar serializar um OffsetDateTime em algum example da nossa documentacao, nos depararemos com a seguinte Exception:
-                 Caused by: com.fasterxml.jackson.databind.exc.InvalidDefinitionException: Java 8 date/time type java.time.
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-                  -->
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
-            <!--            <version>3.0.0</version>-->
         </dependency>
-
 
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20240303</version>
+            <version>${spring.json.version}</version>
         </dependency>
 
 
@@ -210,7 +175,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-authorization-server</artifactId>
-            <version>0.3.1</version>
+            <version>${spring.authorizationserver.version}</version>
         </dependency>
 
         <dependency>
@@ -221,22 +186,8 @@
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>oauth2-oidc-sdk</artifactId>
-            <version>6.21.2</version>
+            <version>${spring.nimbusds.version}</version>
         </dependency>
-
-        <!-- DEPENDENCIA PARA Token JWT (JSON Web Token)
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt</artifactId>
-            <version>1.0.11.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>2.3.8.RELEASE</version>
-        </dependency>
-       -->
 
 
         <dependency>
@@ -277,8 +228,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
