--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -173,5 +173,15 @@ springdoc.packages-to-scan=com.algaworks.algafood.api
 # Define os caminhos que o SpringDoc deve considerar ao gerar a documentação da API
 #springdoc.paths-to-match=/v1/**,/v2/**
 
-springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/token
-springdoc.oAuthFlow.tokenUrl=http://aplicacao-cliente
+springdoc.oAuthFlow.authorizationUrl=http://127.0.0.1:8080/oauth2/authorize
+springdoc.oAuthFlow.tokenUrl=http://127.0.0.1:8080/oauth2/token
+
+springdoc.swagger-ui.oauth.client.id=algafood-web-authorization-code-token-jwt
+springdoc.swagger-ui.oauth.client.secret=web123
+springdoc.swagger-ui.oauth.use.pkce-with-authorization-code-grant=true
+springdoc.swagger-ui.oauth.use.basic-authentication-with-access-code-grant=true
+
+
+
+#springdoc.oAuthFlow.authorizationUrl=http://localhost:8080/oauth/token
+#springdoc.oAuthFlow.tokenUrl=http://aplicacao-cliente
